fixed overflow prob...really

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -24,7 +24,8 @@ textarea {
 	box-shadow: 0 0 35px $box-shadow;
 	color: $text-color;
 	position: fixed;
-	// overflow-x: hidden;
+	overflow-x: hidden;
+	overflow-y: hidden;
 	top: 0;
 	left: 0;
 	z-index: 100;
@@ -103,7 +104,8 @@ textarea {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	// overflow-x: hidden;
+	overflow-x: hidden;
+	overflow-y: hidden;
 	&-content {
 		height: 85vh;
 		display: flex;
@@ -164,7 +166,8 @@ textarea {
 	justify-content: center;
 	align-items: center;
 	overflow: hidden;
-	// overflow-x: hidden;
+	overflow-x: hidden;
+	overflow-y: hidden;
 	& h1 {
 		font-size: 2.5rem;
 		font-weight: 300;
@@ -271,7 +274,7 @@ textarea {
 	background: transparent;
 	border: 2px solid pink;
 	position: absolute;
-	z-index: -1;
+	z-index: -9999;
 	overflow-x: hidden;
 	overflow-y: hidden;
 	overflow: hidden;
@@ -286,6 +289,8 @@ textarea {
 	position: relative;
 	background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(51, 51, 51, 0.5));
 	overflow-x: hidden;
+	overflow-y: hidden;
+	overflow: hidden;
 	& h1 {
 		font-weight: 300;
 		font-size: 2.5rem;
@@ -355,6 +360,9 @@ textarea {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	overflow: hidden;
+	overflow-y: hidden;
+	overflow-x: hidden;
 	& h1 {
 		font-weight: 300;
 		font-size: 2.5rem;
@@ -379,6 +387,8 @@ textarea {
 		background-size: cover;
 		background-position: center;
 		background-attachment: fixed;
+		overflow-y: hidden;
+		overflow-x: hidden;
 	}
 
 	&-background {
